<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:paddingHorizontal="12dp"
    android:paddingVertical="12dp"
    android:layout_marginVertical="4dp"
    android:background="@drawable/user_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/item_user_name"
        android:textSize="20sp"
        android:text="@string/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/item_user_age"
            android:text="@string/user_age"
            android:textSize="18sp"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/item_user_id"
            android:text="@string/user_id"
            android:gravity="right"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

</LinearLayout>