<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="24dp"
    android:layout_marginVertical="8dp"
    android:background="@drawable/post_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="UseCompoundDrawables">

    <TextView
        android:id="@+id/item_post_header"
        android:text="@string/post_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#20A080"
        android:textStyle="bold"
        android:textSize="20sp" />
    
    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/item_post_image"
        android:layout_marginTop="12dp"
        android:src="@mipmap/ic_launcher"
        android:adjustViewBounds="true"
        app:shapeAppearanceOverlay="@style/post_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/item_post_text"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="24dp"
        android:text="@string/post_text"
        android:textSize="16sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>